System modal dialog should block shelf/status/system tray.

Bug: 914133
Test: covered by unit tests. Also tested manually, including OOBE.
Change-Id: I6bbb76092aecbca8c378d050187c958bc8fa9450
Reviewed-on: https://chromium-review.googlesource.com/c/1396794
Commit-Queue: Mitsuru Oshima <oshima@chromium.org>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#620401}
Former-commit-id: 7a1a79b471b50faef61ae28ff988aa91a56a4128